
FIND_PACKAGE(PkgConfig REQUIRED)
IF(PKG_CONFIG_FOUND)
	PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)
	PKG_CHECK_MODULES(GDK3 REQUIRED gdk-3.0)
	IF(GTK3_FOUND)
		MESSAGE(STATUS "GTK3 - ${GTK3_LIBRARIES} -- version: ${GTK3_VERSION}")
	ENDIF()
	IF(GDK3_FOUND)
		MESSAGE(STATUS "GDK3 - ${GDK3_LIBRARIES} -- version: ${GDK3_VERSION}")
	ENDIF()
ELSE()
	MESSAGE(WARNING "")
ENDIF()

FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
FILE(GLOB RES_FILES ${CMAKE_CURRENT_SOURCE_DIR}/res/*.ui)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include/)
ADD_EXECUTABLE(fragview-editor ${SOURCE_FILES} ${HEADER_FILES})

# Link the target to the GTK+ libraries
TARGET_LINK_LIBRARIES(fragview-editor ${GTK3_LIBRARIES} ${GDK3_LIBRARIES} fragview-core)    #TODO use the client fragview.
TARGET_INCLUDE_DIRECTORIES(fragview-editor PRIVATE
		${CMAKE_CURRENT_SOURCE_DIR}/include/
		${GTK3_INCLUDE_DIRS}
		${GDK3_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(fragview-editor PRIVATE
		${GTK3_CFLAGS_OTHER} ${GDK3_CFLAGS_OTHER})
TARGET_LINK_LIBRARIES( fragview-editor PRIVATE ${GTK3_LIBRARY_DIRS})
ADD_DEPENDENCIES(fragview-editor fragview-core)

#
INSTALL( FILES ${CMAKE_CURRENT_SOURCE_DIR}/fragview-editor DESTINATION bin)

IF(UNIX)

ENDIF()