
OPTION(BUILD_WITH_GTK "Use GTK API." OFF)
OPTION(BUILD_WITH_QT "Use QT API." ON)


FILE(GLOB EDITOR_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
						${CMAKE_CURRENT_SOURCE_DIR}/src/Tools/*.cpp)
FILE(GLOB EDITOR_HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
FILE(GLOB RES_FILES ${CMAKE_CURRENT_SOURCE_DIR}/res/*.ui)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include/)
IF(BUILD_WITH_GTK)
	FIND_PACKAGE(PkgConfig REQUIRED)
	IF(PKG_CONFIG_FOUND)
		PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)
		PKG_CHECK_MODULES(GDK3 REQUIRED gdk-3.0)

		IF(GTK3_FOUND)
			MESSAGE(STATUS "GTK3 - ${GTK3_LIBRARIES} -- version: ${GTK3_VERSION}")
		ENDIF()
		IF(GDK3_FOUND)
			MESSAGE(STATUS "GDK3 - ${GDK3_LIBRARIES} -- version: ${GDK3_VERSION}")
		ENDIF()
		
		IF(GTK3_FOUND AND GDK3_FOUND)
			FILE(GLOB GTK_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/GTK/*.cpp)
			ADD_EXECUTABLE(fragview-editor-gtk ${EDITOR_SOURCE_FILES} ${EDITOR_HEADER_FILES} ${GTK_SOURCE_FILES})

			TARGET_LINK_LIBRARIES(fragview-editor-gtk ${GTK3_LIBRARIES} ${GDK3_LIBRARIES} fragview-core)
			TARGET_INCLUDE_DIRECTORIES(fragview-editor-gtk PRIVATE
			${CMAKE_CURRENT_SOURCE_DIR}/include/
			${GTK3_INCLUDE_DIRS}
			${GDK3_INCLUDE_DIRS})

			TARGET_COMPILE_OPTIONS(fragview-editor-gtk PRIVATE
					${GTK3_CFLAGS_OTHER} ${GDK3_CFLAGS_OTHER} -DFRAG_GTK_WINDOW_MANAGER=1)

			TARGET_LINK_LIBRARIES( fragview-editor-gtk PRIVATE ${GTK3_LIBRARY_DIRS})
			ADD_DEPENDENCIES(fragview-editor-gtk fragview-core)
			INSTALL(fragview-editor-gtk DESTINATION bin)
		ENDIF()
	ELSE()
		MESSAGE(WARNING "")
	ENDIF()
ENDIF()
IF(BUILD_WITH_QT)
	SET(CMAKE_AUTOMOC ON)
	SET(CMAKE_INCLUDE_CURRENT_DIR ON)
	FIND_PACKAGE(Qt5 COMPONENTS Widgets)

	IF(Qt5Widgets_FOUND)
		FILE(GLOB QT_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/QT/*.cpp)

		INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include/)
		ADD_EXECUTABLE(fragview-editor-qt ${EDITOR_SOURCE_FILES} ${EDITOR_HEADER_FILES} ${QT_SOURCE_FILES})

		TARGET_LINK_LIBRARIES(fragview-editor-qt ${Qt5Widgets_LIBRARIES} fragcore fragengine)

		TARGET_COMPILE_OPTIONS(fragview-editor-qt PRIVATE
				${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS} ${GDK3_CFLAGS_OTHER} -DFRAG_EDITOR_QT_WINDOW_MANAGER=1)

		TARGET_INCLUDE_DIRECTORIES(fragview-editor-qt PRIVATE
		${CMAKE_CURRENT_SOURCE_DIR}/include/ ${Qt5Widgets_INCLUDE_DIRS})

		ADD_DEPENDENCIES(fragview-editor-qt fragcore fragengine)
		INSTALL(TARGETS fragview-editor-qt DESTINATION bin)

	ELSE()
		MESSAGE(FATAL_ERROR "Could not locate QT5 Version")
	ENDIF()
ENDIF()

#
IF(UNIX)

ENDIF()