
#TODO relocate to the core.
OPTION(BUILD_WITH_SDL_WINDOW "Use SDL for window mangement." ON)

# Define all file lists.
FILE(GLOB SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/audio/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/physic/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/scene/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/scene/subgraph/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/renderpipeline/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/renderer/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/exception/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/utils/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/core/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/core/io/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/core/Scheduler/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/video/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/shadermodel/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/shaders/*.cpp)
FILE(GLOB SOURCE_MAIN_FILES client/src/main.cpp)
FILE(GLOB HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h
		${CMAKE_CURRENT_SOURCE_DIR}/include/Animation/*.h
		${CMAKE_CURRENT_SOURCE_DIR}/include/Core/*.h
		${CMAKE_CURRENT_SOURCE_DIR}/include/Exception/*.h
		${CMAKE_CURRENT_SOURCE_DIR}/include/Renderer/*.h
		${CMAKE_CURRENT_SOURCE_DIR}/include/RenderPipeline/*.h
		${CMAKE_CURRENT_SOURCE_DIR}/include/Video/*.h
		${CMAKE_CURRENT_SOURCE_DIR}/include/Utils/*.h)
# Public headers - subset of header files.
FILE(GLOB DEVELOPMENT_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h
									${CMAKE_CURRENT_SOURCE_DIR}/include/Core/*.h
									${CMAKE_CURRENT_SOURCE_DIR}/include/Core/IO/*.h
									${CMAKE_CURRENT_SOURCE_DIR}/include/Renderer/*.h
									${CMAKE_CURRENT_SOURCE_DIR}/include/physic/*.h
									${CMAKE_CURRENT_SOURCE_DIR}/include/Window/*.h
									${CMAKE_CURRENT_SOURCE_DIR}/include/Video/*.h
									${CMAKE_CURRENT_SOURCE_DIR}/include/Utils/*.h
									${CMAKE_CURRENT_SOURCE_DIR}/include/Exception/*.h)

SET(FRAG_CORE_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/include")
SET(FRAG_CORE_INCLUDE_SUB_DIR 
				${CMAKE_CURRENT_SOURCE_DIR}/include/
				${CMAKE_CURRENT_SOURCE_DIR}/include/Core
				${CMAKE_CURRENT_SOURCE_DIR}/include/Renderer
				${CMAKE_CURRENT_SOURCE_DIR}/include/Utils
				${CMAKE_CURRENT_SOURCE_DIR}/include/physic
				${CMAKE_CURRENT_SOURCE_DIR}/include/Window
				${CMAKE_CURRENT_SOURCE_DIR}/include/Video
				${CMAKE_CURRENT_SOURCE_DIR}/include/Exception)

#${XATLAS_SOURCE} ${NANOSVG_SOURCE}

# Core library for adding support for plugin.
ADD_LIBRARY(fragcore ${SOURCE_FILES} ${HEADER_FILES}
 							${OPEN_SIMPLEX_NOISE_SOURCE}  ${PCG_C_BASIC_SOURCE}
							${RECASTNAVIGATION_SOURCE} ${POLYPARITION_SOURCE} ${KISS_FFT_SOURCE}
							${MISC_SOURCE})
TARGET_LINK_LIBRARIES(fragcore ${SDL2_LIBRARIES} ${ZLIB_LIBRARIES} ${LIBXML2_LIBRARIES} ${Backtrace_LIBRARIES} ${FREETYPE_LIBRARIES}
		${ZIP_LIBRARIES} freeimage m dl taskSch fswatch ${JSONC_LIBRARIES} yaml hpmcpp hpm  ${OPENSSL_CRYPTO_LIBRARY}
		${AVFORMAT_LIBRARIES} ${AVCODEC_LIBRARIES} ${SWSCALE_LIBRARIES} ) #${ASSIMP_LIBRARIES} TODO relocate
ADD_DEPENDENCIES(fragcore taskSch hpm hpmcpp)
TARGET_COMPILE_DEFINITIONS(fragcore PRIVATE FRAG_CORE_INTERNAL_IMP=1)

#
SET_TARGET_PROPERTIES(fragcore PROPERTIES
		COMPILE_FLAGS "${JSONC_CFLAGS_OTHER} ${SDL2_CFLAGS_OTHER} ${AVFORMAT_CFLAGS_OTHER} ${AVCODEC_CFLAGS_OTHER}
		${AVUTIL_CFLAGS_OTHER} ${SWSCALE_CFLAGS_OTHER} ${ASSIMP_CFLAGS_OTHER} ${ZIP_CFLAGS_OTHER}")
TARGET_INCLUDE_DIRECTORIES(fragcore PRIVATE ${SDL2_INCLUDE_DIRS} ${ZIP_INCLUDE_DIRS} ${JSONC_INCLUDE_DIRS}
													 ${NANOSVG_INCLUDE_DIRS} ${RECASTNAVIGATION_INCLUDE_DIRS} ${NANOSVG_INCLUDE_DIRS}
													 ${OPEN_SIMPLEX_NOISE_INCLUDE_DIRS} ${PCG_C_BASIC_INCLUDE_DIRS} ${XATLAS_INCLUDE_DIRS}
													 ${KISS_FFT_INCLUDE_DIRS} ${MISC_INCLUDE_DIRS}
										PUBLIC ${FRAG_CORE_INCLUDE})
TARGET_INCLUDE_DIRECTORIES (fragcore PUBLIC
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
	$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
	$<INSTALL_INTERFACE:include>
)

# Create package information
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/fragcore.pc.in" "${PROJECT_BINARY_DIR}/fragcore.pc" @ONLY)

IF(BUILD_WITH_INSTALL)
	INSTALL(TARGETS fragcore DESTINATION lib COMPONENT ${LIBFRAGCORE_COMPONENT})

	INSTALL(DIRECTORY ${FRAG_CORE_INCLUDE_SUB_DIR} # source directory
			DESTINATION include/fragcore # target directory
			COMPONENT ${LIBFRAGCORE-DEV_COMPONENT}
			)
	INSTALL( FILES "${PROJECT_BINARY_DIR}/fragcore.pc" DESTINATION ${FRAGCORE_LIB_INSTALL_DIR}/pkgconfig/ COMPONENT ${LIBFRAGCORE-DEV_COMPONENT})
ENDIF()