

#TODO add the rov2

# Define all file lists.
FILE(GLOB SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)

#
# FILE(GLOB SAMPLE_GLSL_FILES ${CMAKE_CURRENT_SOURCE_DIR}/samples/glsl/* )
# FILE(GLOB SAMPLE_HLSL_FILES ${CMAKE_CURRENT_SOURCE_DIR}/samples/hlsl/* )
# FILE(GLOB SAMPLE_SPIRV_FILES ${CMAKE_CURRENT_SOURCE_DIR}/samples/spirv/* )
# FILE(GLOB SAMPLE_CLC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/samples/clc/* )
# FILE(GLOB SAMPLE_SHADER_GLSL_FILES ${CMAKE_CURRENT_SOURCE_DIR}/shaders/glsl/* )
# FILE(GLOB SAMPLE_SHADER_SPIRV_FILES ${CMAKE_CURRENT_SOURCE_DIR}/shaders/spriv/* )

# Core library for adding support for plugin.
ADD_LIBRARY(fragengine ${SOURCE_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(fragengine fragview-core ${ASSIMP_LIBRARIES})
ADD_DEPENDENCIES(fragengine fragview-core)
TARGET_COMPILE_DEFINITIONS(fragengine PRIVATE FRAG_ENGINE_INTERNAL_IMP=1)

#
SET_TARGET_PROPERTIES(fragengine PROPERTIES
		COMPILE_FLAGS "${JSONC_CFLAGS_OTHER} ${SDL2_CFLAGS_OTHER} ${AVFORMAT_CFLAGS_OTHER} ${AVCODEC_CFLAGS_OTHER}
		${AVUTIL_CFLAGS_OTHER} ${SWSCALE_CFLAGS_OTHER} ${ASSIMP_CFLAGS_OTHER} ${ZIP_CFLAGS_OTHER}")
TARGET_INCLUDE_DIRECTORIES(fragengine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/)
	ADD_DEPENDENCIES(fragengine fragview-core)

IF(BUILD_WITH_INSTALL)
	INSTALL(TARGETS fragengine DESTINATION lib)
ENDIF()

# Only UNIX systems.
IF( UNIX )
	Find_PACKAGE(UnixCommands REQUIRED)	
ENDIF()